<resources>
    <string name="app_name">MemorAI</string>
    <string name="enter_album_name">Enter album name</string>
    <string name="add">Add</string>
    <string name="album_thumbnail">Album thumbnail</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="photo_detail">Photo detail</string>
    <string name="share">Share</string>
    <string name="share_with">Share with</string>
    <string name="item_photo_cd_text">Test</string>
    <string name="open_camera">Open camera\n</string>
    <string name="open_gallery">Open gallery</string>
    <string name="preview_image">Preview image\n</string>
    <string name="add_photo">Add photo</string>
    <string name="add_album">Add album</string>
    <string name="photos">Photos</string>
    <string name="albums">Albums</string>
    <string name="root_album_id">1</string>
    <string name="hi">Hi %1$s! \nHave a nice day</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="add_text">Done</string>
    <string name="edit_rotation">Rotation</string>
    <string name="edit_opacity">Opacity</string>
    <string name="edit_brush">Brush</string>
    <string name="edit_close">Close</string>
    <string name="edit_done">Done</string>
    <string name="save_dialog_title">Save Changes</string>
    <string name="save_dialog_message">Do you want to save changes before exiting?</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="discard_button">Discard</string>
    <string name="exit_button">Exit</string>
    <string name="error_saving">Error saving image</string>
    <string name="error_loading">Error loading image</string>
    <string name="error_temp_file">Cannot create temporary file</string>
    <string name="error_processing">Image processing error</string>
    <string name="error_unknown_tool">Unknown Tool</string>
    <string name="saving_progress">Saving...</string>
    <string name="scale_dialog_title">Scale Image</string>
    <string name="scale_dialog_ok">OK</string>
    <string name="scale_dialog_cancel">Cancel</string>
    <string name="retry_dialog_title">Save Error</string>
    <string name="retry_button">Retry</string>
    <string name="created">Created: </string>
    <string name="modified">Modified: </string>
    <string name="private_photo">Private</string>
    <string name="public_photo">Public</string>
    <string name="search_by_tags">Search by tags</string>
    <string name="photos_found">%d photos found with tag: %s</string>
    <string name="no_photos_found">No photos found with the tag: %s</string>
    <string name="enter_tag_prompt">Enter a tag to search</string>
    <string name="failed_to_capture_photo">Failed to capture photo</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="no_photos_captured">No photos captured</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_message">Save %d photo(s)?</string>
    <string name="confirm_button">Confirm</string>
    <string name="analyzing_photos">Analyzing photos...</string>
    <string name="photos_saved_success">Photos saved successfully!</string>
    <string name="photo_tagged_with">Photo tagged with: %s</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="no_photos_imported">No photos imported</string>
    <string name="confirm_import_title">Confirm</string>
    <string name="confirm_import_message">Save %d photo(s)?</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="confirm_import">Confirm Import</string>
    <string name="sync_failed">Sync failed: %s</string>
    <string name="sync_success">Sync completed successfully</string>
    <string name="sync_notification_title">Sync successful</string>
    <string name="sync_notification_message">Data has been synced with cloud</string>
    <string name="please_enter_album_title">Please enter an album title</string>
    <string name="album_created">Album created!</string>
    <string name="photo_removed">Photo removed from selection</string>
    <string name="album_name_hint">Album Name</string>
    <string name="album_deleted">Album deleted</string>
    <string name="album_name_incorrect">Album name incorrect</string>
    <string name="album_info">Album ID: %1$s\nCreated: %2$s\nName: %3$s</string>
    <string name="toast_album_options">Album options clicked</string>
    <string name="album_updated">Album Updated!</string>
    <string name="comfortable">Comfortable</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="select_photos">Select Photos</string>
    <string name="enter_album_title">Enter album title</string>
    <string name="search_your_photos">Search Your Photos</string>
    <string name="create_album">Create Album</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="favorites">Favorites</string>
    <string name="collections">Collections</string>
    <string name="update_album">Update Album</string>
    <string name="add_new_album">Add new album</string>
    <string name="import_photo_from_gallery">Import photo from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_photo_album">Add Photo Into Album</string>
    <string name="privates">Privates</string>
    <string name="add_media">+ Add media</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="set_private">Set Private</string>
    <string name="art">Art</string>
    <string name="two_column">Two Columns</string>
</resources>