<?xml version="1.0" encoding="utf-8"?><!--res/menu/menu_photo_detail.xml-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info"
        android:title="Infomation"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share_photo"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        android:title="@string/share" />
    <item
        android:id="@+id/action_edit_photo"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"
        style="@style/content"
        android:title="@string/edit" />
    <item
        android:id="@+id/action_delete_photo"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"
        style="@style/content"
        android:title="@string/delete" />
    <item
        android:id="@+id/action_private"
        android:icon="@drawable/ic_lock_open"
        style="@style/content"
        android:title="@string/set_private"
        app:showAsAction="ifRoom" />
</menu>
