<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_collections"
            android:text="@string/add_new_album" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonImportPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_collections"
            android:text="@string/import_photo_from_gallery" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_camera"
            android:text="@string/take_photo" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
