<?xml version="1.0" encoding="utf-8"?><!-- res/layout/fragment_album_update.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAlbumUpdate"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="Edit Album" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAlbumTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAlbumUpdate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAlbumTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_album_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSelectPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select_photos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAlbumTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSelectedPhotos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@id/buttonUpdateAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSelectPhotos" />

    <Button
        android:id="@+id/buttonUpdateAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:enabled="false"
        android:text="@string/update_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
