<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Phần header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@drawable/bg_gradient"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_background"
            android:padding="10dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <!-- Thống kê -->
    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/photosCountText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:text="@string/photos"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/albumsCountText"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/content"
                android:text="@string/albums"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/albumPrivate"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/content"
                android:text="@string/privates"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Nút Thêm Media và Chỉnh sửa -->
    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/stats">

        <Button
            android:id="@+id/btn_add_media"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/theme_night_theme"
            android:paddingHorizontal="20dp"
            android:text="@string/add_media"
            android:textColor="@color/button"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/theme_night_theme"
            android:paddingHorizontal="20dp"
            android:text="@string/edit_profile"
            android:textColor="@color/button"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <!-- Danh mục Art -->
    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/art"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/btns"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Hình ảnh trong danh mục Art -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPhotos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_category"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
